--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "kakao-promise",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "description": "Simple promise wrapper for Kakao sdk with high usability",
   "main": "index.js",
   "repository": "https://github.com/zeakd/kakao-promise",
   "author": "zeakd",
   "license": "MIT",
-  "private": true,
   "scripts": {
     "clean": "rimraf lib",
     "prebuild": "npm run clean",
@@ -17,13 +16,17 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "dotenv": "^4.0.0",
-    "mocha": "^4.0.1",
-    "rimraf": "^2.6.2",
-    "should": "^13.1.3"
+    "rimraf": "^2.6.2"
   },
   "files": [
-    "lib" 
-  ]
+    "lib"
+  ],
+  "dependencies": {
+    "debug": "^3.1.0",
+    "load-js": "^2.0.0",
+    "lodash.clonedeep": "^4.5.0"
+  }
 }
